--- a/Photon-Tinker/Base.lproj/Main.storyboard
+++ b/Photon-Tinker/Base.lproj/Main.storyboard
@@ -1224,7 +1224,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="681"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" keyboardDismissMode="onDrag" dataMode="prototypes" style="plain" separatorStyle="none" allowsSelectionDuringEditing="YES" allowsMultipleSelectionDuringEditing="YES" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="zM6-TQ-DlY">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" keyboardDismissMode="onDrag" dataMode="prototypes" style="plain" separatorStyle="none" allowsSelectionDuringEditing="YES" allowsMultipleSelection="YES" allowsMultipleSelectionDuringEditing="YES" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="zM6-TQ-DlY">
                                 <rect key="frame" x="0.0" y="52" width="375" height="629"/>
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <color key="sectionIndexBackgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
@@ -1238,7 +1238,37 @@
                                             <subviews>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uUJ-YE-kOp">
                                                     <rect key="frame" x="8" y="8" width="359" height="80"/>
+                                                    <subviews>
+                                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="L" translatesAutoresizingMaskIntoConstraints="NO" id="C1I-kr-cpQ">
+                                                            <rect key="frame" x="16" y="48" width="12" height="16"/>
+                                                            <color key="tintColor" red="0.3921568627" green="0.3921568627" blue="0.3921568627" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="height" constant="16" id="Gev-O4-9Su"/>
+                                                                <constraint firstAttribute="width" constant="12" id="hoV-9A-PyV"/>
+                                                            </constraints>
+                                                        </imageView>
+                                                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="(Arguments)" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="g7b-mM-AuN">
+                                                            <rect key="frame" x="30" y="40" width="321" height="32"/>
+                                                            <color key="backgroundColor" red="1" green="1" blue="1" alpha="0.95619528210000004" colorSpace="custom" customColorSpace="sRGB"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="height" constant="32" id="ZZM-Aw-hRn"/>
+                                                            </constraints>
+                                                            <color key="textColor" red="0.14901960784313725" green="0.14901960784313725" blue="0.14901960784313725" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                            <fontDescription key="fontDescription" name="Gotham-Book" family="Gotham" pointSize="16"/>
+                                                            <textInputTraits key="textInputTraits" spellCheckingType="no" keyboardType="alphabet" returnKeyType="send"/>
+                                                            <connections>
+                                                                <outlet property="delegate" destination="yHo-f1-oRZ" id="QPf-h7-Phx"/>
+                                                            </connections>
+                                                        </textField>
+                                                    </subviews>
                                                     <color key="backgroundColor" red="0.96078431369999995" green="0.96078431369999995" blue="0.96078431369999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <constraints>
+                                                        <constraint firstItem="g7b-mM-AuN" firstAttribute="centerY" secondItem="uUJ-YE-kOp" secondAttribute="top" constant="56" id="Dxk-v4-y2i"/>
+                                                        <constraint firstItem="C1I-kr-cpQ" firstAttribute="centerY" secondItem="g7b-mM-AuN" secondAttribute="centerY" id="GcK-bJ-Ra0"/>
+                                                        <constraint firstItem="g7b-mM-AuN" firstAttribute="leading" secondItem="C1I-kr-cpQ" secondAttribute="trailing" constant="2" id="OHQ-O9-TLj"/>
+                                                        <constraint firstItem="g7b-mM-AuN" firstAttribute="leading" secondItem="uUJ-YE-kOp" secondAttribute="leading" constant="30" id="UQZ-il-gue"/>
+                                                        <constraint firstAttribute="trailing" secondItem="g7b-mM-AuN" secondAttribute="trailing" constant="8" id="e6U-5r-tKm"/>
+                                                    </constraints>
                                                 </view>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="f" translatesAutoresizingMaskIntoConstraints="NO" id="JuL-gn-y3Y">
                                                     <rect key="frame" x="16" y="12" width="24" height="24"/>
@@ -1288,35 +1318,12 @@
                                                         <action selector="expandTapped:" destination="yHo-f1-oRZ" eventType="touchUpInside" id="5j6-8c-wQC"/>
                                                     </connections>
                                                 </button>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="L" translatesAutoresizingMaskIntoConstraints="NO" id="C1I-kr-cpQ">
-                                                    <rect key="frame" x="24" y="48" width="12" height="16"/>
-                                                    <color key="tintColor" red="0.3921568627" green="0.3921568627" blue="0.3921568627" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="height" constant="16" id="Gev-O4-9Su"/>
-                                                        <constraint firstAttribute="width" constant="12" id="hoV-9A-PyV"/>
-                                                    </constraints>
-                                                </imageView>
-                                                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="(Arguments)" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="g7b-mM-AuN">
-                                                    <rect key="frame" x="38" y="48" width="321" height="32"/>
-                                                    <color key="backgroundColor" red="1" green="1" blue="1" alpha="0.95619528210000004" colorSpace="custom" customColorSpace="sRGB"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="height" constant="32" id="ZZM-Aw-hRn"/>
-                                                    </constraints>
-                                                    <color key="textColor" red="0.14901960784313725" green="0.14901960784313725" blue="0.14901960784313725" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                                    <fontDescription key="fontDescription" name="Gotham-Book" family="Gotham" pointSize="16"/>
-                                                    <textInputTraits key="textInputTraits" spellCheckingType="no" keyboardType="alphabet" returnKeyType="send"/>
-                                                    <connections>
-                                                        <outlet property="delegate" destination="yHo-f1-oRZ" id="QPf-h7-Phx"/>
-                                                    </connections>
-                                                </textField>
                                             </subviews>
                                             <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
                                             <constraints>
                                                 <constraint firstItem="0dm-jH-4Zo" firstAttribute="height" secondItem="TM8-k9-hFk" secondAttribute="height" id="0uK-a5-h8P"/>
-                                                <constraint firstItem="g7b-mM-AuN" firstAttribute="leading" secondItem="C1I-kr-cpQ" secondAttribute="trailing" constant="2" id="1LF-WE-hl0"/>
                                                 <constraint firstItem="3Nc-Od-lkh" firstAttribute="leading" secondItem="0dm-jH-4Zo" secondAttribute="trailing" id="28n-KN-Okn"/>
                                                 <constraint firstItem="kjJ-4v-IS6" firstAttribute="height" secondItem="TM8-k9-hFk" secondAttribute="height" id="8PK-nz-07u"/>
-                                                <constraint firstItem="g7b-mM-AuN" firstAttribute="centerY" secondItem="sJz-JL-Jdf" secondAttribute="top" constant="64" id="BDQ-4u-30z"/>
                                                 <constraint firstItem="uUJ-YE-kOp" firstAttribute="trailing" secondItem="OMk-lI-vrX" secondAttribute="trailing" constant="8" id="BJP-GZ-fBu"/>
                                                 <constraint firstItem="ayT-RB-ByZ" firstAttribute="trailing" secondItem="uUJ-YE-kOp" secondAttribute="trailing" constant="8" id="GjP-xg-fcS"/>
                                                 <constraint firstItem="uUJ-YE-kOp" firstAttribute="top" secondItem="sJz-JL-Jdf" secondAttribute="top" constant="8" id="Gn5-QK-Fm1"/>
@@ -1331,14 +1338,12 @@
                                                 <constraint firstItem="uUJ-YE-kOp" firstAttribute="trailing" secondItem="kYJ-Zq-ZcG" secondAttribute="trailing" constant="8" id="Wb7-aY-tdP"/>
                                                 <constraint firstItem="JuL-gn-y3Y" firstAttribute="centerY" secondItem="TM8-k9-hFk" secondAttribute="centerY" id="Xem-Lx-QkW"/>
                                                 <constraint firstItem="3Nc-Od-lkh" firstAttribute="centerY" secondItem="0dm-jH-4Zo" secondAttribute="centerY" id="Zga-Ys-T42"/>
+                                                <constraint firstItem="ayT-RB-ByZ" firstAttribute="leading" secondItem="C1I-kr-cpQ" secondAttribute="trailing" constant="-36" id="dFp-gt-wwd"/>
                                                 <constraint firstItem="TM8-k9-hFk" firstAttribute="leading" secondItem="JuL-gn-y3Y" secondAttribute="trailing" constant="6" id="iRU-gg-5Fi"/>
                                                 <constraint firstItem="kYJ-Zq-ZcG" firstAttribute="centerY" secondItem="0dm-jH-4Zo" secondAttribute="centerY" id="jas-bJ-lNZ"/>
                                                 <constraint firstItem="0dm-jH-4Zo" firstAttribute="trailing" secondItem="TM8-k9-hFk" secondAttribute="trailing" id="kN0-6R-Sfs"/>
-                                                <constraint firstItem="C1I-kr-cpQ" firstAttribute="top" secondItem="g7b-mM-AuN" secondAttribute="top" id="mbW-QJ-fLh"/>
                                                 <constraint firstItem="TM8-k9-hFk" firstAttribute="centerY" secondItem="sJz-JL-Jdf" secondAttribute="top" constant="24" id="oJc-vr-w8a"/>
                                                 <constraint firstItem="TM8-k9-hFk" firstAttribute="width" relation="lessThanOrEqual" secondItem="uUJ-YE-kOp" secondAttribute="width" multiplier="0.6" id="qBz-eu-Jh1"/>
-                                                <constraint firstItem="uUJ-YE-kOp" firstAttribute="trailing" secondItem="g7b-mM-AuN" secondAttribute="trailing" constant="8" id="wW7-lf-7WN"/>
-                                                <constraint firstItem="g7b-mM-AuN" firstAttribute="leading" secondItem="uUJ-YE-kOp" secondAttribute="leading" constant="30" id="wxi-sn-yq1"/>
                                                 <constraint firstItem="kjJ-4v-IS6" firstAttribute="trailing" secondItem="uUJ-YE-kOp" secondAttribute="trailing" id="ySw-gC-a3f"/>
                                             </constraints>
                                             <viewLayoutGuide key="safeArea" id="ayT-RB-ByZ"/>
